Cleaned up rubocop rules, spec test, and formatting

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,11 +2,21 @@ AllCops:
   Exclude:
     - vendor/**/*
     - bin/*
+    - spec/
     - metadata.rb
+    - Berksfile
+    - Rakefile
+    - Gemfile
 
 Encoding:
   Enabled: false
 HashSyntax:
   Enabled: false
 LineLength:
+  Enabled: false
+Style/FrozenStringLiteralComment:
+  Enabled: false
+Style/SymbolArray:
+  Enabled: false
+Metrics/BlockLength:
   Enabled: false
